# Synchrony

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  Synchrony.doap  app.drey.Synchrony.Devel.json  cz.pervoj.Synchrony.Devel.json  cz.pervoj.Synchrony.json  meson.build  meson_options.txt
.gitlab/issue_templates/: Bug Report.md  Commit Access Request.md  Feature Request.md
data/: cz.pervoj.Synchrony.appdata.xml.in  cz.pervoj.Synchrony.desktop.in  cz.pervoj.Synchrony.gschema.xml  meson.build  synchrony.appdata.xml.in.in  synchrony.desktop.in.in  synchrony.gschema.xml.in
data/icons/: meson.build
po/: POTFILES  POTFILES.in  meson.build  synchrony.pot
src/: application.vala  constants.vala.in  main.vala  meson.build  provider-controller.vala  provider.vala  remote-controller.vala  remote.vala  synchrony.gresource.xml  synchrony.gresource.xml.in  window.ui  window.vala
